[project]
name = "neutrino_api_client_requests"
version = "4.6.16"
authors = [
    { name="Neutrino API", email="ops@neutrinoapi.com" },
]
description = "Neutrino API Python client using the requests HTTP library"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
dependencies = [
    "requests >= 2.28.1, < 3",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Libraries",
    "Topic :: Communications :: Telephony",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Filters",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Security",
    "Topic :: Utilities",
]

[project.urls]
"Homepage" = "https://github.com/NeutrinoAPI/neutrino-api-client-requests"
"Bug Tracker" = "https://www.neutrinoapi.com/contact-us/"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
